--- a/data/bio.yml
+++ b/data/bio.yml
@@ -5,6 +5,36 @@ bgImage : images/team/bio_bg.jpg
 image : images/team/bio.jpg
 name : Mamoru Satoh
 designation : シンガーソングライター・ギタリスト
-description :
+playStyle : John Mayer, Eric Claptonのようにブルースギターを弾きながら歌うスタイル
+description : |-
+  19歳でギターを始め、22歳から4年間ロンドンで音楽留学。
+  イギリス滞在時にBlues, Soul, R&B, Funk, Jazzに傾倒するようになり、John Mayer, Jamie Cullumのように、ブラックミュージックにポップス要素を加えた曲を作り始める。
+  また英語特有のリズム感やメロディー乗りの良さ、そして世界中のリスナーへ届けられるという英語の魅力に惹かれ、英語で作詞作曲を始める。
 
+  卒業後、単身でアイルランドへ渡航。
+  バスキング（路上演奏）のみで生活費を稼ぎながら、演奏経験を積む。
+  英語で歌うスタイルで、次第に現地のバー、レストラン等で演奏の仕事を貰うようになり、音楽活動の幅を広げていく。
+  その後、10ヶ国25都市をバスキングで渡り歩きながら作詞作曲を続ける。
+  この3年間で計1000回以上のバスキングを実施。
+  各地で出会ったミュージシャンからオファーを受け、フェスティバルやTVCMでも演奏。
 
+  2018年より、日本での音楽活動を開始。
+  夢はThe Beatles, Eric Claptonのような人の心に残る曲作りや演奏をすること。
+achievementYoutube : https://www.youtube.com/embed/dUtCEd_BPFY
+achievements :
+  -
+    content : 2018年5月 1stアルバム - Not For Eternity - を制作（アコースティックソロアルバム）
+  -
+    content : 2018年7月 ドイツのテレビCMのレコーディングにギタリストとして参加 [動画あり]
+    emphasis : true
+  -
+    content : 2018年8月 ドイツ、クロアチアのフェスティバルで演奏
+  -
+    content : 2018年12月 東京汐留Blue Moodでレコ発ワンマンライブ（満員御礼）
+profile : |-
+  生年月日：1988年12月24日
+  血液型：AB型
+  出身地：東京
+  主な海外滞在歴：香港、ロンドン、ゴールウェイ(アイルランド)、モントリオール(カナダ)、ニューヨーク
+  好きなミュージシャン：John Mayer, Eric Clapton, The Beatles, Bob Dylan, Neil Young, Laura Marling, Jamie Cullum, 他全てのBlues/Soul系ミュージシャン
+  好きなこと：絵を描くこと、散歩、自然、野球
