--- a/data/bio.yml
+++ b/data/bio.yml
@@ -3,10 +3,13 @@ heading :
 headingSpan : Biography
 bgImage : images/team/bio_bg.jpg
 image : images/team/bio.jpg
+squareImage : images/team/bio_square.jpg
+liveImage : images/team/201808_live.jpg
+paintingImage : images/team/201807_painting.jpg
 name : Mamoru Satoh
 designation : シンガーソングライター・ギタリスト
 playStyle : John Mayer, Eric Claptonのようにブルースギターを弾きながら歌うスタイル
-description : |-
+longDescription : |-
   19歳でギターを始め、22歳から4年間ロンドンで音楽留学。
   イギリス滞在時にBlues, Soul, R&B, Funk, Jazzに傾倒するようになり、John Mayer, Jamie Cullumのように、ブラックミュージックにポップス要素を加えた曲を作り始める。
   また英語特有のリズム感やメロディー乗りの良さ、そして世界中のリスナーへ届けられるという英語の魅力に惹かれ、英語で作詞作曲を始める。
@@ -20,6 +23,10 @@ description : |-
 
   2018年より、日本での音楽活動を開始。
   夢はThe Beatles, Eric Claptonのような人の心に残る曲作りや演奏をすること。
+shortDescription : |-
+  19歳でギターを始め、22歳から4年間ロンドンで音楽留学。
+  卒業後3年間、単身で10ヶ国20都市をバスキングしながら、英語での作詞作曲活動を続ける。
+  2018年より、日本での音楽活動を開始。
 achievementYoutube : https://www.youtube.com/embed/dUtCEd_BPFY
 achievements :
   -
@@ -31,10 +38,10 @@ achievements :
     content : 2018年8月 ドイツ、クロアチアのフェスティバルで演奏
   -
     content : 2018年12月 東京汐留Blue Moodでレコ発ワンマンライブ（満員御礼）
-profile : |-
-  生年月日：1988年12月24日
-  血液型：AB型
-  出身地：東京
-  主な海外滞在歴：香港、ロンドン、ゴールウェイ(アイルランド)、モントリオール(カナダ)、ニューヨーク
-  好きなミュージシャン：John Mayer, Eric Clapton, The Beatles, Bob Dylan, Neil Young, Laura Marling, Jamie Cullum, 他全てのBlues/Soul系ミュージシャン
-  好きなこと：絵を描くこと、散歩、自然、野球
+profile :
+  - 生年月日：1988年12月24日
+  - 血液型：AB型
+  - 出身地：東京
+  - 主な海外滞在歴：香港、ロンドン、ゴールウェイ(アイルランド)、モントリオール(カナダ)、ニューヨーク
+  - 好きなミュージシャン：John Mayer, Eric Clapton, The Beatles, Bob Dylan, Neil Young, Laura Marling, Jamie Cullum, 他全てのBlues/Soul系ミュージシャン
+  - 好きなこと：絵を描くこと、散歩、自然、野球
