update album youtube and minor change for bio

--- a/data/bio.yml
+++ b/data/bio.yml
@@ -8,7 +8,7 @@ liveImage : images/team/201808_live.jpg
 paintingImage : images/team/201807_painting.jpg
 name : Mamoru Satoh
 designation : シンガーソングライター・ギタリスト
-playStyle : John Mayer, Eric Claptonのようにブルースギターを弾きながら歌うスタイル
+playStyle : John Mayer, Eric Claptonのようにブルースをベースに、アドリブで歌とギターを演奏するスタイル
 longDescription : |-
   19歳でギターを始め、22歳から4年間ロンドンで音楽留学。
   イギリス滞在時にBlues, Soul, R&B, Funk, Jazzに傾倒するようになり、John Mayer, Jamie Cullumのように、ブラックミュージックにポップス要素を加えた曲を作り始める。
@@ -24,9 +24,9 @@ longDescription : |-
   2018年より、日本での音楽活動を開始。
   夢はThe Beatles, Eric Claptonのような人の心に残る曲作りや演奏をすること。
 shortDescription : |-
+  John Mayer, Eric Claptonのようにブルースをベースに、アドリブで歌とギターを演奏するスタイル。
   19歳でギターを始め、22歳から4年間ロンドンで音楽留学。
-  卒業後3年間、単身で10ヶ国20都市をバスキングしながら、英語での作詞作曲活動を続ける。
-  2018年より、日本での音楽活動を開始。
+  卒業後3年間、単身で10ヶ国20都市をバスキングしながら、英語での作詞作曲活動を続ける。2018年より、日本での音楽活動を開始。
 achievementYoutube : https://www.youtube.com/embed/dUtCEd_BPFY
 achievements :
   -
