--- a/data/bio.yml
+++ b/data/bio.yml
@@ -25,8 +25,8 @@ longDescription : |-
   夢はThe Beatles, Eric Claptonのような人の心に残る曲作りや演奏をすること。
 shortDescription : |-
   John Mayer, Eric Claptonのようにブルースをベースに、アドリブで歌とギターを演奏するスタイル。
-  19歳でギターを始め、22歳から4年間ロンドンで音楽留学。
-  卒業後3年間、単身で10ヶ国20都市をバスキングしながら、英語での作詞作曲活動を続ける。2018年より、日本での音楽活動を開始。
+  19歳でギターを始め、22歳から4年間ロンドンで音楽留学。卒業後、単身で10ヶ国25都市をバスキングしながら渡り歩く。
+  ヨーロッパのフェスティバル演奏、TVCMレコーディング参加など幅広く活動。2018年より、日本での音楽活動を開始。
 achievementYoutube : https://www.youtube.com/embed/dUtCEd_BPFY
 achievements :
   -
