update favourite musicians

--- a/data/bio.yml
+++ b/data/bio.yml
@@ -43,5 +43,6 @@ profile :
   - 血液型：AB型
   - 出身地：東京
   - 主な海外滞在歴：香港、ロンドン、ゴールウェイ(アイルランド)、モントリオール(カナダ)、ニューヨーク
-  - 好きなミュージシャン：John Mayer, Eric Clapton, The Beatles, Bob Dylan, Neil Young, Laura Marling, Jamie Cullum, 他全てのBlues/Soul系ミュージシャン
+  - 好きなミュージシャン：John Mayer, Eric Clapton, Jamie Cullum, D'Angelo, 他全てのBlues/Soul系ミュージシャン
+  - 好きなソングライター：The Beatles, Bob Dylan, Neil Young, James Taylor, Simon & Garfunkel, Laura Marling, Eminem
   - 好きなこと：絵を描くこと、散歩、自然、野球
