--- a/data/bio.yml
+++ b/data/bio.yml
@@ -17,7 +17,7 @@ longDescription : |-
   卒業後、単身でアイルランドへ渡航。
   バスキング（路上演奏）のみで生活費を稼ぎながら、演奏経験を積む。
   英語で歌うスタイルで、次第に現地のバー、レストラン等で演奏の仕事を貰うようになり、音楽活動の幅を広げていく。
-  その後、10ヶ国25都市をバスキングで渡り歩きながら作詞作曲を続ける。
+  その後、10ヶ国25都市をバスキングで渡り歩き、各地で演奏・作詞作曲を続ける。
   この3年間で計1000回以上のバスキングを実施。
   各地で出会ったミュージシャンからオファーを受け、フェスティバルやTVCMでも演奏。
 
