--- a/data/ja/bio.yml
+++ b/data/ja/bio.yml
@@ -8,8 +8,9 @@ liveImage : images/team/201808_live.jpg
 paintingImage : images/team/201807_painting.jpg
 name : Mamoru Satoh
 designation : シンガーソングライター・ギタリスト
-playStyle : John Mayer, Eric Claptonのようにブルースをベースに、アドリブで歌とギターを演奏するスタイル
 longDescription : |-
+  John Mayer, Eric Claptonのようにブルースをベースに、アドリブで歌とギターを演奏するスタイル
+
   19歳でギターを始め、22歳から4年間ロンドンで音楽留学。
   イギリス滞在時にBlues, Soul, R&B, Funk, Jazzに傾倒するようになり、John Mayer, Jamie Cullumのように、ブラックミュージックにポップス要素を加えた曲を作り始める。
   また英語特有のリズム感やメロディー乗りの良さ、そして世界中のリスナーへ届けられるという英語の魅力に惹かれ、英語で作詞作曲を始める。
@@ -27,6 +28,7 @@ shortDescription : |-
   John Mayer, Eric Claptonのようにブルースをベースに、アドリブで歌とギターを演奏するスタイル。
   19歳でギターを始め、22歳から4年間ロンドンで音楽留学。卒業後、単身で10ヶ国25都市をバスキングしながら渡り歩く。
   ヨーロッパのフェスティバル演奏、TVCMレコーディング参加など幅広く活動。2018年より、日本での音楽活動を開始。
+activitiesTitle : 主な実績
 achievementYoutube : https://www.youtube.com/embed/dUtCEd_BPFY
 achievements :
   -
@@ -38,6 +40,7 @@ achievements :
     content : 2018年8月 ドイツ、クロアチアのフェスティバルで演奏
   -
     content : 2018年12月 東京汐留Blue Moodでレコ発ワンマンライブ（満員御礼）
+profileTitle : プロフィール
 profile :
   - 生年月日：1988年12月24日
   - 血液型：AB型
