--- a/data/en/bio.yml
+++ b/data/en/bio.yml
@@ -36,6 +36,6 @@ achievements :
     content : Dec 2018 Done the sold out show at Blue Mood in Tokyo, Japan
 profileTitle : About me
 profile :
-  - Favourite musicians: John Mayer, Eric Clapton, Jamie Cullum, D'Angelo, all other blues/soul/R&B musicians
-  - Favourite songwriters: The Beatles, Bob Dylan, Neil Young, James Taylor, Simon & Garfunkel, Laura Marling, Eminem
-  - Hobbies: Painting (check out the album artwork, and gallery)
+  - "Favourite musicians: John Mayer, Eric Clapton, Jamie Cullum, D'Angelo, all other blues/soul/R&B musicians"
+  - "Favourite songwriters: The Beatles, Bob Dylan, Neil Young, James Taylor, Simon & Garfunkel, Laura Marling, Eminem"
+  - "Hobbies: Painting (check out the album artwork, and gallery)"
