--- a/data/ja/bio.yml
+++ b/data/ja/bio.yml
@@ -7,7 +7,7 @@ squareImage : images/team/bio_square.jpg
 liveImage : images/team/201808_live.jpg
 paintingImage : images/team/201807_painting.jpg
 name : Mamoru Satoh
-designation : シンガーソングライター・ギタリスト
+designation : シンガーソングライター・ギタリスト・絵描き
 longDescription : |-
   John Mayer, Eric Claptonのようにブルースをベースに、アドリブで歌とギターを演奏するスタイル
 
@@ -25,9 +25,7 @@ longDescription : |-
   2018年より、日本での音楽活動を開始。
   夢はThe Beatles, Eric Claptonのような人の心に残る曲作りや演奏をすること。
 shortDescription : |-
-  John Mayer, Eric Claptonのようにブルースをベースに、アドリブで歌とギターを演奏するスタイル。
-  19歳でギターを始め、22歳から4年間ロンドンで音楽留学。卒業後、単身で10ヶ国25都市をバスキングしながら渡り歩く。
-  ヨーロッパのフェスティバル演奏、TVCMレコーディング参加など幅広く活動。2018年より、日本での音楽活動を開始。
+  シンガーソングライター・ギタリスト・絵描き。TVCMレコーディング参加、ヨーロッパのフェスティバル演奏、など国内外で活動。John Mayer, Eric Claptonのようにブルースをベースに、アドリブで歌とギターを演奏するスタイル。10ヶ国25都市で演奏経験あり。
 activitiesTitle : 主な実績
 achievementYoutube : https://www.youtube.com/embed/dUtCEd_BPFY
 achievements :
@@ -47,5 +45,5 @@ profile :
   - 出身地：東京
   - 主な海外滞在歴：香港、ロンドン、ゴールウェイ(アイルランド)、モントリオール(カナダ)、ニューヨーク
   - 好きなミュージシャン：John Mayer, Eric Clapton, Jamie Cullum, D'Angelo, 他全てのBlues/Soul系ミュージシャン
-  - 好きなソングライター：The Beatles, Bob Dylan, Neil Young, James Taylor, Simon & Garfunkel, Laura Marling, Eminem
+  - 好きなソングライター：The Beatles, Bob Dylan, Neil Young, James Taylor, Simon & Garfunkel, Laura Marling
   - 好きなこと：絵を描くこと、散歩、自然、野球
