--- a/data/en/bio.yml
+++ b/data/en/bio.yml
@@ -7,21 +7,21 @@ squareImage : images/team/bio_square.jpg
 liveImage : images/team/201808_live.jpg
 paintingImage : images/team/201807_painting.jpg
 name : Mamoru Satoh
-designation : Singer-songwriter/Guitarist
+designation : Singer-songwriter/Guitarist/Painter
 longDescription : |-
-  Mamoru is a Japanese blues musician with an international background. He was born in Tokyo, but he has grown up in different countries and has travelled the world with his guitar, which makes him have multicultural and diverce experience, as a person and as a musician.
-  His play style is based on Blues/R&B/Soul. You can hear both bluesy tasty phrases and catchy melody in his music, which comes from his big influences from John Mayer, Eric Clapton and The Beatles.
-  He owns his uniqueness with his smoky voice, bluesy tasty guitar, funky groove, and jazzy harmony.
-
-  He has played guitar for German TV advert (check out the video below please), and played festivals in Germany and Croatia, not just gigging around in Europe, in North America and in Japan.
-  He started off his music career from busking in Galway, Ireland, after graduating from
-  the London Centre of Contemporary Music in 2014. He gradually gained reputations by busking and got bigger opportunities based on that.
-
-  He has been playing music in more than 25 cities, 10 countries (including major cities like London, Tokyo, Montreal, New York City, Los Angeles etc).
+  Mamoru is a Japanese singer-songwriter/guitarist/painter with an International background.
+  He was born in Tokyo, and he has grown up in different countries and has travelled the world with his guitar, which makes him have multicultural and diverse experience.
+  He started his music career from busking and built the reputation from there.
+  He has played guitar for German TV advert (please check out the video below), played music festivals in Europe, and played shows over 10 countries, 25 cities in Europe / North America / Japan (including major cities like London, Tokyo, Montreal, New York City, Los Angeles etc).
+  
+  His music style is based on Blues/R&B/Soul/Funk. You can hear both black music elements and catchy melodies in his music, which come from his big influences from John Mayer, Eric Clapton and The Beatles.
+  He's got his own uniqueness by his smoky voice, tasty bluesy lines, and jazzy laid back harmony etc.
+  
+  He's got a bachelor of music (BMus) as he graduated from London Centre of Contemporary Music in 2014. He has great teaching experience of private lessons as well as workshops (Rock camp in Pula, Croatia), ranging from complete beginners to advanced players. Please feel free to contact me about lessons or other enquiries.
 shortDescription : |-
-  John Mayer, Eric Claptonのようにブルースをベースに、アドリブで歌とギターを演奏するスタイル。
-  19歳でギターを始め、22歳から4年間ロンドンで音楽留学。卒業後、単身で10ヶ国25都市をバスキングしながら渡り歩く。
-  ヨーロッパのフェスティバル演奏、TVCMレコーディング参加など幅広く活動。2018年より、日本での音楽活動を開始。
+  Mamoru is a Japanese singer-songwriter/guitarist/painter with an International background.
+  He's played guitar for German TV advert, played music festivals in Europe, and shows over 10 countries, 25 cities.
+  Influenced by John Mayer, Eric Clapton and The Beatles. Blues/R&B/Soul/Funk/Rock
 activitiesTitle : Recent activities
 achievementYoutube : https://www.youtube.com/embed/dUtCEd_BPFY
 achievements :
@@ -31,11 +31,11 @@ achievements :
     content : Jul 2018 Recorded guitar parts for TV adverts
     emphasis : true
   -
-    content : Aug 2018 Played in festivals in Germany, Croatia
+    content : Aug 2018 Played music festivals in Germany, and in Croatia
   -
     content : Dec 2018 Done the sold out show at Blue Mood in Tokyo, Japan
 profileTitle : About me
 profile :
   - "Favourite musicians: John Mayer, Eric Clapton, Jamie Cullum, D'Angelo, all other blues/soul/R&B musicians"
-  - "Favourite songwriters: The Beatles, Bob Dylan, Neil Young, James Taylor, Simon & Garfunkel, Laura Marling, Eminem"
-  - "Hobbies: Painting (check out the album artwork, and gallery)"
+  - "Favourite songwriters: The Beatles, Bob Dylan, Neil Young, James Taylor, Simon & Garfunkel, Laura Marling"
+  - "Hobbies: Painting (check out the album artwork, and gallery in this website)"
