Add btnContent variable.

--- a/data/en/bio.yml
+++ b/data/en/bio.yml
@@ -22,6 +22,7 @@ shortDescription : |-
   Mamoru is a Japanese singer-songwriter/guitarist/painter with an International background.
   He's played guitar for German TV advert, played music festivals in Europe, and shows over 10 countries, 25 cities.
   Influenced by John Mayer, Eric Clapton and The Beatles. Blues/R&B/Soul/Funk/Rock
+btnContent: Read more
 activitiesTitle : Recent activities
 achievementYoutube : https://www.youtube.com/embed/dUtCEd_BPFY
 achievements :
