--- a/data/ja/bio.yml
+++ b/data/ja/bio.yml
@@ -26,6 +26,7 @@ longDescription : |-
   夢はThe Beatles, Eric Claptonのような人の心に残る曲作りや演奏をすること。
 shortDescription : |-
   シンガーソングライター・ギタリスト・絵描き。TVCMレコーディング参加、ヨーロッパのフェスティバル演奏、など国内外で活動。John Mayer, Eric Claptonのようにブルースをベースに、アドリブで歌とギターを演奏するスタイル。10ヶ国25都市で演奏経験あり。
+btnContent: もっと見る
 activitiesTitle : 主な実績
 achievementYoutube : https://www.youtube.com/embed/dUtCEd_BPFY
 achievements :
