english bio update

--- a/data/en/bio.yml
+++ b/data/en/bio.yml
@@ -9,7 +9,7 @@ paintingImage : images/team/201807_painting.jpg
 name : Mamoru Satoh
 designation : Singer-songwriter/Guitarist/Painter
 longDescription : |-
-  Mamoru is a Japanese singer-songwriter/guitarist/painter with an International background.
+  Mamoru is a Japanese artist with an International background.
   He was born in Tokyo, and he has grown up in different countries and has travelled the world with his guitar, which makes him have multicultural and diverse experience.
   He started his music career from busking and built the reputation from there.
   He has played guitar for German TV advert (please check out the video below), played music festivals in Europe, and played shows over 10 countries, 25 cities in Europe / North America / Japan (including major cities like London, Tokyo, Montreal, New York City, Los Angeles etc).
