--- a/data/ja/bio.yml
+++ b/data/ja/bio.yml
@@ -47,4 +47,4 @@ profile :
   - 主な海外滞在歴：香港、ロンドン、ゴールウェイ(アイルランド)、モントリオール(カナダ)、ニューヨーク
   - 好きなミュージシャン：John Mayer, Eric Clapton, Jamie Cullum, D'Angelo, 他全てのBlues/Soul系ミュージシャン
   - 好きなソングライター：The Beatles, Bob Dylan, Neil Young, James Taylor, Simon & Garfunkel, Laura Marling
-  - 好きなこと：絵を描くこと、散歩、自然、野球
+  - 好きなこと：描画（アルバムジャケット絵参照）、絵画鑑賞、自然、野球
