english bio updated

--- a/data/en/bio.yml
+++ b/data/en/bio.yml
@@ -9,18 +9,18 @@ paintingImage : images/team/201807_painting.jpg
 name : Mamoru Satoh
 designation : Singer-songwriter/Guitarist/Painter
 longDescription : |-
-  Mamoru is a Japanese artist with an International background.
-  He was born in Tokyo, and he has grown up in different countries and has travelled the world with his guitar, which makes him have multicultural and diverse experience.
-  He started his music career from busking and built the reputation from there.
-  He has played guitar for German TV advert (please check out the video below), played music festivals in Europe, and played shows over 10 countries, 25 cities in Europe / North America / Japan (including major cities like London, Tokyo, Montreal, New York City, Los Angeles etc).
-  
-  His music style is based on Blues/R&B/Soul/Funk. You can hear both black music elements and catchy melodies in his music, which come from his big influences from John Mayer, Eric Clapton and The Beatles.
-  He's got his own uniqueness by his smoky voice, tasty bluesy lines, and jazzy laid back harmony etc.
-  
-  He's got a bachelor of music (BMus) as he graduated from London Centre of Contemporary Music in 2014. He has great teaching experience of private lessons as well as workshops (Rock camp in Pula, Croatia), ranging from complete beginners to advanced players. Please feel free to contact me about lessons or other enquiries.
+ Mamoru is a Japanese artist with a multicultural background, having grown up in Japan, Hong Kong, United Kingdom and traveling the world with his guitar since graduating from the London Centre of Contemporary Music in 2014.
+ He started out busking in Galway (Ireland), and has built a reputation one performance at a time.
+
+ Highlights of his journey so far, has been recording guitar for a German TV advert (please check out the video below), playing music festivals in Europe, and playing shows in over 10 countries, including cities like London, Tokyo, Montreal, New York City, and Los Angeles.
+
+ His music style emanates elements from Blues/R&B/Soul/Funk with catchy melodies. He is also deeply influenced by John Mayer, Eric Clapton and The Beatles. With a smoky voice, tasty blues guitar phrases, and laid back jazz harmony, he strives to found a unique sound.
+
+ He is also active in the community, giving music workshops, like Rock camp in Pula, Croatia) for beginners and advanced players.
+ Please feel free to contact him about lessons, community workshops, and performances.
 shortDescription : |-
   Mamoru is a Japanese singer-songwriter/guitarist/painter with an International background.
-  He's played guitar for German TV advert, played music festivals in Europe, and shows over 10 countries, 25 cities.
+  He's recorded for German TV advert, played music festivals in Europe, and played shows over 10 countries, 25 cities.
   Influenced by John Mayer, Eric Clapton and The Beatles. Blues/R&B/Soul/Funk/Rock
 btnContent: Read more
 activitiesTitle : Recent activities
@@ -29,7 +29,7 @@ achievements :
   -
     content : May 2018 Released 1st acoustic album - Not For Eternity -
   -
-    content : Jul 2018 Recorded guitar parts for TV adverts
+    content : Jul 2018 Joined the recording for TV advert (Germany)
     emphasis : true
   -
     content : Aug 2018 Played music festivals in Germany, and in Croatia
