--- a/data/en/bio.yml
+++ b/data/en/bio.yml
@@ -13,9 +13,9 @@ longDescription : |-
 
  Highlights of his journey has been recording guitar for a German TV advert (please check out the video below), playing music festivals in Europe, and playing shows in over 10 countries, including cities like London, Tokyo, Montreal, New York City, and Los Angeles.
 
- His music style emanates elements from Blues/R&B/Soul/Funk with catchy melodies. He is also deeply influenced by John Mayer, Eric Clapton and The Beatles. With a smoky voice, tasty blues guitar phrases, and laid back jazz harmony, he strives to found a unique sound.
+ His music style emanates elements from Blues/R&B/Soul/Funk with catchy melodies. He is also deeply influenced by John Mayer, Eric Clapton and The Beatles. With a smoky voice, tasty blues guitar, and laid back jazz harmony, he strives to found a unique sound.
 
- He is also active in the community, giving music workshops, like Rock camp in Pula, Croatia) for beginners and advanced players.
+ He is also active in the community, giving music workshops, like Rock camp in Pula (Croatia) for beginners and advanced players.
  Please feel free to contact him about lessons, community workshops, and performances.
 shortDescription : |-
   Mamoru is a Japanese singer-songwriter/guitarist/painter with an International background.
