--- a/data/en/bio.yml
+++ b/data/en/bio.yml
@@ -38,4 +38,4 @@ profileTitle : About me
 profile :
   - "Favourite musicians: John Mayer, Eric Clapton, Jamie Cullum, D'Angelo, all other blues/soul/R&B musicians"
   - "Favourite songwriters: The Beatles, Bob Dylan, Neil Young, James Taylor, Simon & Garfunkel, Laura Marling"
-  - "Hobbies: Painting (check out the album artwork, and gallery in this website)"
+  - "Hobbies: Painting (Please check out the album artwork, Tumblr @ms8music, Pinterest @ms8music, Flickr @Mamoru Satoh, Instagram @ms8music, and Behance @ms8music)"
