bio english update

--- a/data/en/bio.yml
+++ b/data/en/bio.yml
@@ -9,17 +9,17 @@ paintingImage : images/team/201807_painting.jpg
 name : Mamoru Satoh
 designation : Singer-songwriter/Guitarist/Painter
 longDescription : |-
- Mamoru is a Japanese artist with a multicultural background, having grown up in Japan, Hong Kong, United Kingdom and traveling the world with his guitar since graduating from the London Centre of Contemporary Music in 2014. He started out busking in Galway (Ireland), and has built a reputation one performance at a time.
-
- Highlights of his journey has been recording guitar for a German TV advert (please check out the video below), playing music festivals in Europe, and playing shows in over 10 countries, including cities like London, Tokyo, Montreal, New York City, and Los Angeles.
-
- His music style emanates elements from Blues/R&B/Soul/Funk with catchy melodies. He is also deeply influenced by John Mayer, Eric Clapton and The Beatles. With a smoky voice, tasty blues guitar, and laid back jazz harmony, he strives to found a unique sound.
-
- He is also active in the community, giving music workshops, like Rock camp in Pula (Croatia) for beginners and advanced players.
+ Mamoru is a Japanese artist with a multicultural background, having grown up in Japan, Hong Kong, United Kingdom. He has been traveling the world with his guitar since graduating from the London Centre of Contemporary Music in 2014. He started out busking in Galway (Ireland), and has built a reputation one performance at a time.
+ 
+ Highlights of his journey have been recording guitar for a German TV advert (please check out the video below), playing music festivals in Europe, and playing shows in over 10 countries 25 cities, including cities like London, Tokyo, Montreal, New York City, and Los Angeles.
+ 
+ His music style emanates the sounds of blues, soul and jazz and combines them with catchy melodies. He is also deeply influenced by John Mayer, Eric Clapton and The Beatles. With a smoky voice, tasty blues guitar, and laid back jazz harmony, he strives to found a unique sound.
+ 
+ He is also active in the community - giving music workshops, like Rock camp in Pula (Croatia) for beginners and advanced players.
  Please feel free to contact him about lessons, community workshops, and performances.
 shortDescription : |-
-  Mamoru is a Japanese singer-songwriter/guitarist/painter with an International background.
-  He's recorded for German TV advert, played music festivals in Europe, and played shows over 10 countries, 25 cities.
+  Mamoru is a Japanese singer-songwriter/guitarist/painter with a multicultural background.
+  He's recorded for a German TV advert, played music festivals in Europe, and played shows over 10 countries, 25 cities.
   Influenced by John Mayer, Eric Clapton and The Beatles. Blues/R&B/Soul/Funk/Rock
 btnContent: Read more
 activitiesTitle : Recent activities
@@ -28,12 +28,12 @@ achievements :
   -
     content : May 2018 Released 1st acoustic album - Not For Eternity -
   -
-    content : Jul 2018 Joined the recording for TV advert (Germany)
+    content : Jul 2018 Joined the recording for a TV advert in Germany
     emphasis : true
   -
-    content : Aug 2018 Played music festivals in Germany, and in Croatia
+    content : Aug 2018 Played music festivals in Germany and Croatia
   -
-    content : Dec 2018 Done the sold out show at Blue Mood in Tokyo, Japan
+    content : Dec 2018 Performed in a sold out show at Blue Mood in Tokyo, Japan
 profileTitle : About me
 profile :
   - "Favourite musicians: John Mayer, Eric Clapton, Jamie Cullum, D'Angelo, all other blues/soul/R&B musicians"
