--- a/data/en/bio.yml
+++ b/data/en/bio.yml
@@ -11,7 +11,7 @@ designation : Singer-songwriter/Guitarist/Painter
 longDescription : |-
  Mamoru is a Japanese artist with a multicultural background, having grown up in Japan, Hong Kong, United Kingdom. He has been traveling the world with his guitar since graduating from the London Centre of Contemporary Music in 2014. He started out busking in Galway (Ireland), and has built a reputation one performance at a time.
  
- Highlights of his journey have been recording guitar for a German TV advert (please check out the video below), playing music festivals in Europe, and playing shows in over 10 countries 25 cities, including cities like London, Tokyo, Montreal, New York City, and Los Angeles.
+ Highlights of his journey have been recording guitar for a German TV advert (please check out the video below), playing music festivals in Europe (with ex-Weather Girls Ingrid Arthur etc), and playing shows in over 10 countries 25 cities, including cities like London, Tokyo, Montreal, New York City, and Los Angeles.
  
  His music style emanates the sounds of blues, soul and jazz and combines them with catchy melodies. He is also deeply influenced by John Mayer, Eric Clapton and The Beatles. With a smoky voice, tasty blues guitar, and laid back jazz harmony, he strives to found a unique sound.
  
