--- a/data/en/bio.yml
+++ b/data/en/bio.yml
@@ -6,21 +6,22 @@ image : images/team/bio.jpg
 squareImage : images/team/bio_square.jpg
 liveImage : images/team/201808_live.jpg
 paintingImage : images/team/201807_painting.jpg
-name : Mamoru Satoh
-designation : Singer-songwriter/Guitarist/Painter
+name : Masa
+designation : Neo City Pop Singer-songwriter/Guitarist
 longDescription : |-
- Mamoru is a Japanese artist with a multicultural background, having grown up in Japan, Hong Kong, United Kingdom. He has been traveling the world with his guitar since graduating from the London Centre of Contemporary Music in 2014. He started out busking in Galway (Ireland), and has built a reputation one performance at a time.
- 
- Highlights of his journey have been recording guitar for a German TV advert (please check out the video below), playing music festivals in Europe (with ex-Weather Girls Ingrid Arthur etc), and playing shows in over 10 countries 25 cities, including cities like London, Tokyo, Montreal, New York City, and Los Angeles.
- 
- His music style emanates the sounds of blues, soul and jazz and combines them with catchy melodies. He is also deeply influenced by John Mayer, Eric Clapton and The Beatles. With a smoky voice, tasty blues guitar, and laid back jazz harmony, he strives to found a unique sound.
- 
- He is also active in the community - giving music workshops, like Rock camp in Pula (Croatia) for beginners and advanced players.
- Please feel free to contact him about lessons, community workshops, and performances.
+ Masa (Mamoru Satoh) is a Japanese artist with a multicultural background, having grown up in Japan, Hong Kong, and the United Kingdom. He has been traveling the world with his guitar. He started out busking in Galway, Ireland, and has built a reputation one performance at a time.
+
+ Highlights of his journey have been recording guitar for a German TV advertisement, playing music festivals in Europe (with ex-Weather Girls Ingrid Arthur and others), and playing shows in over 10 countries and 25 cities including London, Tokyo, New York City, Berlin, Montreal, and so on.
+
+ Masa creates a unique Neo City Pop sound with smoky vocals, tasty blues guitar, and laid back jazz harmony. His music style emanates the sounds of blues, soul, and jazz and combines them with catchy melodies.
+
+ Throughout the traveling experiences, Masa found that you can learn a lot from different cultures. One of his dreams is to spread the virtuous nature of Japanese culture through his musical journey. He enjoys playing in cultural events and music festivals. To pursue this dream Masa created Neo Tokyo, a Japanese cross-cultural community on Discord welcome to all. (https://discord.gg/QyEQBY6) 
+
+ For inquiries about performances, collaborations, recording sessions, or other works for hire, please contact Fogwood Record: david@fogwoodrecords.com
 shortDescription : |-
-  Mamoru is a Japanese singer-songwriter/guitarist/painter with a multicultural background.
+  Masa is a Neo City Pop singer-songwriter/guitarist with a multicultural background.
   He's recorded for a German TV advert, played music festivals in Europe, and played shows over 10 countries, 25 cities.
-  Influenced by John Mayer, Eric Clapton and The Beatles. Blues/R&B/Soul/Funk/Rock
+  Influenced by John Mayer, The Beatles, black music and city pop.
 btnContent: Read more
 activitiesTitle : Recent activities
 achievementYoutube : https://www.youtube.com/embed/dUtCEd_BPFY
