--- a/data/en/bio.yml
+++ b/data/en/bio.yml
@@ -7,7 +7,7 @@ squareImage : images/team/bio_square.jpg
 liveImage : images/team/201808_live.jpg
 paintingImage : images/team/201807_painting.jpg
 name : Masa
-designation : Neo City Pop Singer-songwriter/Guitarist
+designation : Neo City Pop singer-songwriter/guitarist
 longDescription : |-
  Masa (Mamoru Satoh) is a Japanese artist with a multicultural background, having grown up in Japan, Hong Kong, and the United Kingdom. He has been traveling the world with his guitar. He started out busking in Galway, Ireland, and has built a reputation one performance at a time.
 
@@ -37,6 +37,6 @@ achievements :
     content : Dec 2018 Performed in a sold out show at Blue Mood in Tokyo, Japan
 profileTitle : About me
 profile :
-  - "Favourite musicians: John Mayer, Eric Clapton, Jamie Cullum, D'Angelo, all other blues/soul/R&B musicians"
-  - "Favourite songwriters: The Beatles, Bob Dylan, Neil Young, James Taylor, Simon & Garfunkel, Laura Marling"
-  - "Hobbies: Painting (Please check out the album artwork, Tumblr @ms8music, Pinterest @ms8music, Flickr @Mamoru Satoh, Instagram @ms8music, and Behance @ms8music)"
+  - "Favourite genre: Black music (blues/jazz/neo-soul etc), city pop, folk etc"
+  - "Favourite musicians: The Beatles, John Mayer, D'Angelo, Tatsuro Yamashita etc"
+  - "Hobbies: Painting, museums, nature"
