--- a/data/ja/bio.yml
+++ b/data/ja/bio.yml
@@ -6,26 +6,21 @@ image : images/team/bio.jpg
 squareImage : images/team/bio_square.jpg
 liveImage : images/team/201808_live.jpg
 paintingImage : images/team/201807_painting.jpg
-name : Mamoru Satoh
-designation : シンガーソングライター・ギタリスト・絵描き
+name : Masa (Mamoru Satoh)
+designation : ネオシティポップ系シンガーソングライター・ギタリスト
 longDescription : |-
-  John Mayer, Eric Claptonのようにブルースをベースに、アドリブで歌とギターを演奏するスタイル
+  従来のシティポップにモダンな要素を取り入れたネオシティポップのアーティスト。
+  John Mayer, Eric Claptonのようにブルースギターとアドリブをベースに、歌とギターを演奏するスタイル。
 
-  19歳でギターを始め、22歳から4年間ロンドンで音楽留学。
-  イギリス滞在時にBlues, Soul, R&B, Funk, Jazzに傾倒するようになり、John Mayer, Jamie Cullumのように、ブラックミュージックにポップス要素を加えた曲を作り始める。
-  また英語特有のリズム感やメロディー乗りの良さ、そして世界中のリスナーへ届けられるという英語の魅力に惹かれ、英語で作詞作曲を始める。
+  ビートルズやシティポップを聴いて育ち、ロンドンに音楽留学した際にブルースやジャズなどブラックミュージックに傾倒するようになる。
+  また英語という言語特有のリズム感やメロディー乗りの良さ、そして世界中のリスナーへ届けられるという英語の魅力に惹かれ、英語で作詞作曲を始める。
 
-  卒業後、単身でアイルランドへ渡航。
-  バスキング（路上演奏）のみで生活費を稼ぎながら、演奏経験を積む。
-  英語で歌うスタイルで、次第に現地のバー、レストラン等で演奏の仕事を貰うようになり、音楽活動の幅を広げていく。
-  その後、10ヶ国25都市をバスキングで渡り歩き、各地で演奏・作詞作曲を続ける。
-  この3年間で計1000回以上のバスキングを実施。
-  各地で出会ったミュージシャンからオファーを受け、フェスティバルやTVCMでも演奏。
+  卒業後、単身でアイルランドへ渡航。バスキング（路上演奏）のみで生活費を稼ぎながら、次第に現地のバー、レストラン等で演奏の仕事を貰うようになる。
+  その後、10ヶ国25都市をバスキング（3年間で計1000回以上）で渡り歩く。各地で出会ったミュージシャンからオファーを受け、フェスティバルやTVCMでも演奏。
 
-  2018年より、日本での音楽活動を開始。
-  夢はThe Beatles, Eric Claptonのような人の心に残る曲作りや演奏をすること。
+  旅の経験から異文化から学ぶことの大事さを知り、日本文化の良さを音楽活動を通して世界に広めるのが夢。音楽を通して異文化交流するコミュニティー【ネオ東京（https://discord.gg/QyEQBY6）】の設立・運営者。
 shortDescription : |-
-  シンガーソングライター・ギタリスト・絵描き。TVCMレコーディング参加、ヨーロッパのフェスティバル演奏、など国内外で活動。John Mayer, Eric Claptonのようにブルースをベースに、アドリブで歌とギターを演奏するスタイル。10ヶ国25都市で演奏経験あり。
+  ネオシティポップ系シンガーソングライター・ギタリスト。TVCMレコーディング参加、ヨーロッパのフェスティバルを含む10ヶ国25都市で演奏。従来のシティポップにモダンな要素を取り入れたネオシティポップアーティスト。
 btnContent: もっと見る
 activitiesTitle : 主な実績
 achievementYoutube : https://www.youtube.com/embed/dUtCEd_BPFY
@@ -43,8 +38,8 @@ profileTitle : プロフィール
 profile :
   - 生年月日：1988年12月24日
   - 血液型：AB型
-  - 出身地：東京
+  - 出身地：神奈川
   - 主な海外滞在歴：香港、ロンドン、ゴールウェイ(アイルランド)、モントリオール(カナダ)、ニューヨーク
-  - 好きなミュージシャン：John Mayer, Eric Clapton, Jamie Cullum, D'Angelo, 他全てのBlues/Soul系ミュージシャン
-  - 好きなソングライター：The Beatles, Bob Dylan, Neil Young, James Taylor, Simon & Garfunkel, Laura Marling
-  - 好きなこと：描画（アルバムジャケット絵、参照：Tumblr @ms8music, Pinterest @ms8music, Flickr @Mamoru Satoh, Instagram @ms8music, Behance @ms8music）、絵画鑑賞、自然、野球
+  - 好きな音楽ジャンル：ブラックミュージック（blues/jazz/neo-soul etc）、シティポップ、フォーク　など
+  - 好きなミュージシャン：The Beatles, John Mayer, D'Angelo, 山下達郎　など
+  - 好きなこと：描画（アルバムジャケット絵）、アート鑑賞、自然
