--- a/data/en/bio.yml
+++ b/data/en/bio.yml
@@ -23,17 +23,20 @@ shortDescription : |-
   Influenced by John Mayer, The Beatles, black music and city pop.
 btnContent: Read more
 activitiesTitle : Recent activities
-achievementYoutube : https://www.youtube.com/embed/dUtCEd_BPFY
+achievementYoutube : https://www.youtube.com/embed/Np1laykdctc
 achievements :
   -
-    content : May 2018 Released 1st acoustic album - Not For Eternity -
-  -
-    content : Jul 2018 Joined the recording for a TV advert in Germany
+    content : Aug 2019 [Video below] Festival with Ingrid Arthur (ex Weather Girls)
     emphasis : true
+  -
+    content : Dec 2018 Performed in a sold out show at Blue Mood in Tokyo, Japan
   -
     content : Aug 2018 Played music festivals in Germany and Croatia
   -
-    content : Dec 2018 Performed in a sold out show at Blue Mood in Tokyo, Japan
+    content : Jul 2018 [Other videos below] Recorded for a TV advert in Germany
+    emphasis : true
+  -
+    content : May 2018 Released 1st acoustic album - Not For Eternity -
 profileTitle : About me
 profile :
   - "Favourite genre: Black music (blues/jazz/neo-soul etc), city pop, folk etc"
