--- a/data/ja/bio.yml
+++ b/data/ja/bio.yml
@@ -22,17 +22,20 @@ shortDescription : |-
   ネオシティポップ系シンガーソングライター・ギタリスト。TVCMレコーディング参加、ヨーロッパのフェスティバルを含む10ヶ国25都市で演奏。従来のシティポップにモダンな要素を取り入れたネオシティポップアーティスト。
 btnContent: もっと見る
 activitiesTitle : 主な実績
-achievementYoutube : https://www.youtube.com/embed/dUtCEd_BPFY
+achievementYoutube : https://www.youtube.com/embed/Np1laykdctc
 achievements :
   -
-    content : 2018年5月 1stアルバム - Not For Eternity - を制作（アコースティックソロアルバム）
-  -
-    content : 2018年7月 ドイツのテレビCMのレコーディングにギタリストとして参加 [動画あり]
+    content : 2019年8月 [動画あり]フェスティバル演奏(元ウェザーガールズと共演)
     emphasis : true
+  -
+    content : 2018年12月 東京汐留Blue Moodでレコ発ワンマンライブ（満員御礼）
   -
     content : 2018年8月 ドイツ、クロアチアのフェスティバルで演奏
   -
-    content : 2018年12月 東京汐留Blue Moodでレコ発ワンマンライブ（満員御礼）
+    content : 2018年7月 ドイツのテレビCMのレコーディングにギタリストとして参加 [動画下記]
+    emphasis : true
+  -
+    content : 2018年5月 1stアルバム - Not For Eternity - を制作（アコースティックソロアルバム）
 profileTitle : プロフィール
 profile :
   - 生年月日：1988年12月24日
