--- a/data/en/bio.yml
+++ b/data/en/bio.yml
@@ -16,7 +16,7 @@ longDescription : |-
 
  Throughout the traveling experiences, Masa found that you can learn a lot from different cultures. One of his dreams is to spread the virtuous nature of Japanese culture through his musical journey. He enjoys playing in cultural events and music festivals. To pursue this dream Masa created Neo Tokyo, a Japanese cross-cultural community on Discord welcome to all. (https://discord.gg/QyEQBY6) 
 
- For inquiries about performances, collaborations, recording sessions, or other works for hire, please contact Fogwood Record: david@fogwoodrecords.com
+ For inquiries about performances, collaborations, comission works (composition, arrangement, recording sessions etc), or other works for hire, please contact Fogwood Record: hello@fogwoodrecords.com
 shortDescription : |-
   Masa is a Neo City Pop singer-songwriter/guitarist with a multicultural background.
   He's recorded for a German TV advert, played music festivals in Europe, and played shows over 10 countries, 25 cities.
