--- a/data/ja/bio.yml
+++ b/data/ja/bio.yml
@@ -18,6 +18,8 @@ longDescription : |-
   その後、10ヶ国25都市をバスキング（3年間で計1000回以上）で渡り歩く。各地で出会ったミュージシャンからオファーを受け、フェスティバルやTVCMでも演奏。
 
   旅の経験から異文化から学ぶことの大事さを知り、日本文化の良さを音楽活動を通して世界に広めるのが夢。音楽を通して異文化交流するコミュニティー【ネオ東京（https://discord.gg/QyEQBY6）】の設立・運営者。
+
+  レコーディング・作編曲などお仕事の依頼やお問い合わせは hello@fogwoodrecords.com までお願いします。
 shortDescription : |-
   ネオシティポップ系シンガーソングライター・ギタリスト。TVCMレコーディング参加、ヨーロッパのフェスティバルを含む10ヶ国25都市で演奏。従来のシティポップにモダンな要素を取り入れたネオシティポップアーティスト。
 btnContent: もっと見る
