--- a/data/en/bio.yml
+++ b/data/en/bio.yml
@@ -8,7 +8,7 @@ paintingImage : images/team/201807_painting.jpg
 name : Masa
 designation : Neo City Pop singer-songwriter/guitarist
 longDescription : |-
- Masa (Mamoru Satoh) is a Japanese artist with a multicultural background, having grown up in Japan, Hong Kong, and the United Kingdom. He has been traveling the world with his guitar. He started out busking in Galway, Ireland, and has built a reputation one performance at a time.
+ Masa is a Japanese artist with a multicultural background, having grown up in Japan, Hong Kong, and the United Kingdom. He has been traveling the world with his guitar. He started out busking in Galway, Ireland, and has built a reputation one performance at a time.
 
  Highlights of his journey have been recording guitar for a German TV advertisement, playing music festivals in Europe (with ex-Weather Girls Ingrid Arthur and others), and playing shows in over 10 countries and 25 cities including London, Tokyo, New York City, Berlin, Montreal, and so on.
 
@@ -16,7 +16,7 @@ longDescription : |-
 
  Throughout the traveling experiences, Masa found that you can learn a lot from different cultures. One of his dreams is to spread the virtuous nature of Japanese culture through his musical journey. He enjoys playing in cultural events and music festivals. To pursue this dream Masa created Neo Tokyo, a Japanese cross-cultural community on Discord welcome to all. (https://discord.gg/QyEQBY6) 
 
- For inquiries about performances, collaborations, comission works (composition, arrangement, recording sessions etc), or other works for hire, please contact Fogwood Record: hello@fogwoodrecords.com
+ For inquiries about performances, collaborations, comission works (composition, arrangement, recording sessions etc), or other works for hire, please contact me: masa.citypop@gmail.com
 shortDescription : |-
   Masa is a Neo City Pop singer-songwriter/guitarist with a multicultural background.
   He's recorded for a German TV advert, played music festivals in Europe, and played shows over 10 countries, 25 cities.
