--- a/data/ja/bio.yml
+++ b/data/ja/bio.yml
@@ -5,7 +5,7 @@ image : images/team/1FaceMasa.jpg
 squareImage : images/team/bio_square.jpg
 liveImage : images/team/201808_live.jpg
 paintingImage : images/team/201807_painting.jpg
-name : Masa (Mamoru Satoh)
+name : Masa
 designation : ネオシティポップ系シンガーソングライター・ギタリスト
 longDescription : |-
   従来のシティポップにモダンな要素を取り入れたネオシティポップのアーティスト。
@@ -19,7 +19,7 @@ longDescription : |-
 
   旅の経験から異文化から学ぶことの大事さを知り、日本文化の良さを音楽活動を通して世界に広めるのが夢。音楽を通して異文化交流するコミュニティー【ネオ東京（https://discord.gg/QyEQBY6）】の設立・運営者。
 
-  レコーディング・作編曲などお仕事の依頼やお問い合わせは hello@fogwoodrecords.com までお願いします。
+  レコーディング・作編曲などお仕事の依頼やお問い合わせは masa.citypop@gmail.com までお願いします。
 shortDescription : |-
   ネオシティポップ系シンガーソングライター・ギタリスト。TVCMレコーディング参加、ヨーロッパのフェスティバルを含む10ヶ国25都市で演奏。従来のシティポップにモダンな要素を取り入れたネオシティポップアーティスト。
 btnContent: もっと見る
