--- a/data/en/bio.yml
+++ b/data/en/bio.yml
@@ -8,35 +8,31 @@ paintingImage : images/team/201807_painting.jpg
 name : Masa
 designation : Neo City Pop singer-songwriter/guitarist
 longDescription : |-
- Masa is a Japanese artist with a multicultural background, having grown up in Japan, Hong Kong, and the United Kingdom. He has been traveling the world with his guitar. He started out busking in Galway, Ireland, and has built a reputation one performance at a time.
+ Masa is a Japanese singer-songwriter & guitarist creating Neo City Pop by blending modern music elements into 70s/80s City Pop. He has spent more than half of his lifetime outside Japan and has been working internationally, not only playing festivals and concerts over 10 countries and 30 cities, but also running a cross-cultural music community called Neo Tokyo (https://discord.gg/QyEQBY6)
 
- Highlights of his journey have been recording guitar for a German TV advertisement, playing music festivals in Europe (with ex-Weather Girls Ingrid Arthur and others), and playing shows in over 10 countries and 25 cities including London, Tokyo, New York City, Berlin, Montreal, and so on.
+ The theme of Masa’s songs are based on unique Japanese vocabulary and philosophy. He creates modern City Pop sounds with smoky vocals, funk/neo-soul groove, tasty blues guitar, and laid back jazz harmony. His music style emanates the sounds of blues, soul, and jazz and combines them with catchy melodies.
 
- Masa creates a unique Neo City Pop sound with smoky vocals, tasty blues guitar, and laid back jazz harmony. His music style emanates the sounds of blues, soul, and jazz and combines them with catchy melodies.
+ Masa grew up listening to City Pop and The Beatles. When he moved to the UK to study music, he got into afro-american music such as blues, jazz, funk, neo-soul etc. After graduation, he started traveling the world with his guitar. He started out busking in Galway, Ireland, and has built a reputation one performance at a time. Highlights of his journey have been recording guitar for a German TV advertisement and playing music festivals in Europe (with ex-Weather Girls Ingrid Arthur and others).
 
- Throughout the traveling experiences, Masa found that you can learn a lot from different cultures. One of his dreams is to spread the virtuous nature of Japanese culture through his musical journey. He enjoys playing in cultural events and music festivals. To pursue this dream Masa created Neo Tokyo, a Japanese cross-cultural community on Discord welcome to all. (https://discord.gg/QyEQBY6) 
-
- For inquiries about performances, collaborations, comission works (composition, arrangement, recording sessions etc), or other works for hire, please contact me: masa.citypop@gmail.com
+ For inquiries about performances, collaborations, commission works etc, please contact me: masa.citypop@gmail.com
 shortDescription : |-
-  Masa is a Neo City Pop singer-songwriter/guitarist with a multicultural background.
-  He's recorded for a German TV advert, played music festivals in Europe, and played shows over 10 countries, 25 cities.
-  Influenced by John Mayer, The Beatles, black music and city pop.
+  Masa is a Japanese singer-songwriter & guitarist creating Neo City Pop by blending modern music elements into 70s/80s City Pop. The theme of Masa’s songs are based on unique Japanese vocabulary and philosophy.
 btnContent: Read more
 activitiesTitle : Recent activities
 achievementYoutube : https://www.youtube.com/embed/Np1laykdctc
 achievements :
   -
+    content : May 2020 Made a Japanese cross-cultural music community 【Neo Tokyo（https://discord.gg/QyEQBY6）】
+  -
+    content : Nov 2019 Started YouTube channel
+  -
     content : Aug 2019 [Video below] Festival with Ingrid Arthur (ex Weather Girls)
     emphasis : true
   -
-    content : Dec 2018 Performed in a sold out show at Blue Mood in Tokyo, Japan
-  -
     content : Aug 2018 Played music festivals in Germany and Croatia
   -
-    content : Jul 2018 [Other videos below] Recorded for a TV advert in Germany
+    content : Jul 2018 Recorded for a TV advert in Germany [The video below]
     emphasis : true
-  -
-    content : May 2018 Released 1st acoustic album - Not For Eternity -
 profileTitle : About me
 profile :
   - "Favourite genre: Black music (blues/jazz/neo-soul etc), city pop, folk etc"
