--- a/data/ja/bio.yml
+++ b/data/ja/bio.yml
@@ -8,36 +8,34 @@ paintingImage : images/team/201807_painting.jpg
 name : Masa
 designation : ネオシティポップ系シンガーソングライター・ギタリスト
 longDescription : |-
-  従来のシティポップにモダンな要素を取り入れたネオシティポップのアーティスト。
-  John Mayer, Eric Claptonのようにブルースギターとアドリブをベースに、歌とギターを演奏するスタイル。
+  70、80年代のシティポップにモダンな要素を取り入れたネオシティポップのアーティスト。人生の半分以上を海外で過ごしていた経験から、日本と海外の架け橋となるようなミュージシャンを目指し、国内外での音楽活動だけでなく、音楽を通して異文化交流するコミュニティー【ネオ東京(https://discord.gg/QyEQBY6)】を設立・運営中（2022年5月現在1500人）。
 
-  ビートルズやシティポップを聴いて育ち、ロンドンに音楽留学した際にブルースやジャズなどブラックミュージックに傾倒するようになる。
-  また英語という言語特有のリズム感やメロディー乗りの良さ、そして世界中のリスナーへ届けられるという英語の魅力に惹かれ、英語で作詞作曲を始める。
+  日本語にしかない言葉や日本人らしい物事の捉え方・世界観をテーマに英語で歌うシンガーソングライター。音楽的にはシティポップのお洒落でジャジーなコードに、ファンク・ネオソウルの黒人グルーヴをベースとし、口ずさみやすいメロディーと琴・三味線・尺八といった伝統的な和楽器を融合させたネオシティポップ（＝次世代のシティポップ）を作っています。
 
-  卒業後、単身でアイルランドへ渡航。バスキング（路上演奏）のみで生活費を稼ぎながら、次第に現地のバー、レストラン等で演奏の仕事を貰うようになる。
-  その後、10ヶ国25都市をバスキング（3年間で計1000回以上）で渡り歩く。各地で出会ったミュージシャンからオファーを受け、フェスティバルやTVCMでも演奏。
+  ライブではJohn MayerやEric Claptonのようにブルージーなアドリブを混ぜながら、歌とギターを演奏するスタイル。
 
-  旅の経験から異文化から学ぶことの大事さを知り、日本文化の良さを音楽活動を通して世界に広めるのが夢。音楽を通して異文化交流するコミュニティー【ネオ東京（https://discord.gg/QyEQBY6）】の設立・運営者。
+  [略歴]
+  幼少期よりビートルズやシティポップを聴いて育ち、ロンドンに音楽留学した際にブルースやジャズなどブラックミュージックに傾倒するようになる。また英語という言語特有のリズム感やメロディー乗りの良さ、そして世界中のリスナーへ届けられるという英語の魅力に惹かれ、英語で作詞作曲を始める。卒業後、単身でアイルランドへ渡航。バスキング（路上演奏）のみで生活費を稼ぎながら、次第に現地のバー、レストラン等で演奏の仕事を貰うようになる。その後、10ヶ国30都市をバスキング（3年間で計1000回以上）で渡り歩く。各地で出会ったミュージシャンからオファーを受け、フェスティバルやTVCMでも演奏。
 
-  レコーディング・作編曲などお仕事の依頼やお問い合わせは masa.citypop@gmail.com までお願いします。
+  お仕事の依頼やお問い合わせは masa.citypop@gmail.com までお願いします。
 shortDescription : |-
-  ネオシティポップ系シンガーソングライター・ギタリスト。TVCMレコーディング参加、ヨーロッパのフェスティバルを含む10ヶ国25都市で演奏。従来のシティポップにモダンな要素を取り入れたネオシティポップアーティスト。
-btnContent: もっと見る
+  日本語にしかない言葉や日本人らしい物事の捉え方をテーマに英語で歌うシンガーソングライター。日本と海外の架け橋となるようなミュージシャンを目指し音楽活動中。
+btnContent: 活動内容を見る
 activitiesTitle : 主な実績
 achievementYoutube : https://www.youtube.com/embed/Np1laykdctc
 achievements :
   -
+    content : 2020年5月 音楽を通して異文化交流するコミュニティー【ネオ東京(https://discord.gg/QyEQBY6)】を設立・運営中（2022年5月現在1500人）
+  -
+    content : 2019年11月 YouTubeチャンネルを開設 [動画下記]
+  -
     content : 2019年8月 [動画あり]フェスティバル演奏(元ウェザーガールズと共演)
     emphasis : true
-  -
-    content : 2018年12月 東京汐留Blue Moodでレコ発ワンマンライブ（満員御礼）
   -
     content : 2018年8月 ドイツ、クロアチアのフェスティバルで演奏
   -
     content : 2018年7月 ドイツのテレビCMのレコーディングにギタリストとして参加 [動画下記]
     emphasis : true
-  -
-    content : 2018年5月 1stアルバム - Not For Eternity - を制作（アコースティックソロアルバム）
 profileTitle : プロフィール
 profile :
   - 生年月日：1988年12月24日
