bio name updated

--- a/data/en/bio.yml
+++ b/data/en/bio.yml
@@ -5,7 +5,7 @@ image : images/team/1FaceMasa.jpg
 squareImage : images/team/bio_square.jpg
 liveImage : images/team/201808_live.jpg
 paintingImage : images/team/201807_painting.jpg
-name : Masa
+name : Masa (Representative of Border-free Music)
 designation : Neo City Pop singer-songwriter/guitarist
 longDescription : |-
  Masa is a Japanese singer-songwriter & guitarist creating Neo City Pop by blending modern music elements into 70s/80s City Pop. He has spent more than half of his lifetime outside Japan and has been working internationally, not only playing festivals and concerts over 10 countries and 30 cities, but also running a cross-cultural music community called Neo Tokyo (https://discord.gg/QyEQBY6)
