--- a/data/en/bio.yml
+++ b/data/en/bio.yml
@@ -36,5 +36,5 @@ achievements :
 profileTitle : About me
 profile :
   - "Favourite genre: Black music (blues/jazz/neo-soul etc), city pop, folk etc"
-  - "Favourite musicians: The Beatles, John Mayer, D'Angelo, Tatsuro Yamashita etc"
+  - "Favourite musicians: The Beatles, John Mayer, D'Angelo, Junko Ohashi, Tatsuro Yamashita etc"
   - "Hobbies: Painting, museums, nature"
