--- a/data/ja/bio.yml
+++ b/data/ja/bio.yml
@@ -43,5 +43,5 @@ profile :
   - 出身地：神奈川
   - 主な海外滞在歴：香港、ロンドン、ゴールウェイ(アイルランド)、モントリオール(カナダ)、ニューヨーク
   - 好きな音楽ジャンル：ブラックミュージック（blues/jazz/neo-soul etc）、シティポップ、フォーク　など
-  - 好きなミュージシャン：The Beatles, John Mayer, D'Angelo, 山下達郎　など
+  - 好きなミュージシャン：The Beatles、John Mayer、D'Angelo、大橋純子、山下達郎　など
   - 好きなこと：描画（アルバムジャケット絵）、アート鑑賞、自然
